--- a/ProductOrg/ProductOrg.Android/ProductOrg.Android.csproj
+++ b/ProductOrg/ProductOrg.Android/ProductOrg.Android.csproj
@@ -146,5 +146,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_adaptive_fore.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\status.mp3" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
