New ToDoItemPage and ToDoItemViewModel using MVVM Pattern

--- a/ProductOrg/ProductOrg/ProductOrg.csproj
+++ b/ProductOrg/ProductOrg/ProductOrg.csproj
@@ -26,6 +26,9 @@
     <EmbeddedResource Update="Views\PomodoroPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ToDoItemPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ToDoPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
